--- a/css/style.scss
+++ b/css/style.scss
@@ -786,7 +786,7 @@ div.pooloptions {
 }
 
 footer {
-  background-image: url('img/footer_background.png');
+  background-image: url('/img/footer_background.png');
   content: "";
   background-size: 100% 100%;
   background-position: center;
