--- a/css/style.scss
+++ b/css/style.scss
@@ -192,7 +192,7 @@ header {
       position: fixed;
       right: 16px;
       top: 12px;
-      background-image: url('/img/menu_open_btn.png');
+      background-image: url('../img/menu_open_btn.png');
       background-size: 100px;
       width: 61px;
       height: 61px;
@@ -786,7 +786,7 @@ div.pooloptions {
 }
 
 footer {
-  background-image: url('/img/footer_background.png');
+  background-image: url('../img/footer_background.png');
   content: "";
   background-size: 100% 100%;
   background-position: center;
