--- a/css/style.css
+++ b/css/style.css
@@ -571,7 +571,7 @@ div.pooloptions section.plan div.slide_bg img {
 }
 @media (min-width: 768px) {
   div.pooloptions section.plan div.slide_bg img {
-    height: auto;
+    height: 664px;
   }
 }
 div.pooloptions div.banner {
