--- a/css/style.scss
+++ b/css/style.scss
@@ -566,7 +566,7 @@ div.pooloptions {
         width: 100%;
         height: 232px;
         @media (min-width: 768px) {
-          height: auto;
+          height: 664px;
         }
       }
     }
